# spark_challenge

./: .gitignore  .gitlab-ci.yaml  README.md  pyproject.toml
spark_challenge/: process_actions.py
tests/: test_process_actions.py
