[tool.poetry]
name = "spark-challenge"
version = "0.1.0"
description = ""
authors = ["Igor Braun <igorbr1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.2"
pyspark = "3.5"
pandas = "^2.2.1"
pyarrow = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
